change download folder

--- a/model/model_pokemon.ipynb
+++ b/model/model_pokemon.ipynb
@@ -60,10 +60,10 @@
     }
    ],
    "source": [
-    "aws_secret = ''\n",
     "aws_access = ''\n",
+    "aws_secret = ''\n",
     "s3 = boto3.client('s3', aws_access_key_id = aws_access, aws_secret_access_key = aws_secret)\n",
-    "s3.download_file('crystals-gdg','data.zip','../data/data.zip')"
+    "s3.download_file('crystals-gdg','data.zip','../data.zip')"
    ]
   },
   {
@@ -84,8 +84,8 @@
     }
    ],
    "source": [
-    "zip_ref = zipfile.ZipFile('../data/data.zip', 'r')\n",
-    "zip_ref.extractall('../data')\n",
+    "zip_ref = zipfile.ZipFile('../data.zip', 'r')\n",
+    "zip_ref.extractall('../')\n",
     "zip_ref.close()\n",
     "os.remove('../data/data.zip')"
    ]
