--- a/model/model_pokemon.ipynb
+++ b/model/model_pokemon.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#aws_access = ''\n",
-    "#aws_secret = ''\n",
+    "aws_access = ''\n",
+    "aws_secret = ''\n",
     "s3 = boto3.client('s3', aws_access_key_id = aws_access, aws_secret_access_key = aws_secret)\n",
     "s3.download_file('crystals-gdg','data.zip','../data.zip')"
    ]
