constants save images

--- a/model/model_pokemon.ipynb
+++ b/model/model_pokemon.ipynb
@@ -29,7 +29,10 @@
     "IMAGE_WIDTH = 128\n",
     "CHANNEL = 3\n",
     "BATCH_SIZE = 64\n",
-    "EPOCH = 5000\n",
+    "EPOCH = 10\n",
+    "\n",
+    "save_image = 1\n",
+    "save_checkpoint = 10\n",
     "\n",
     "version = 'newPokemon'\n",
     "newPoke_path = './' + version"
@@ -298,15 +301,13 @@
     "                # train_noise = np.random.uniform(-1.0, 1.0, size=[batch_size, random_dim]).astype(np.float32)\n",
     "                _, gLoss = sess.run([trainer_g, g_loss],\n",
     "                                    feed_dict={random_input: train_noise, is_train: True})\n",
-    "\n",
-    "            # print 'train:[%d/%d],d_loss:%f,g_loss:%f' % (i, j, dLoss, gLoss)\n",
     "            \n",
-    "        # save check point every 500 epoch\n",
-    "        if i%500 == 0:\n",
+    "        # save check point\n",
+    "        if i%save_checkpoint == 0:\n",
     "            if not os.path.exists('./model/' + version):\n",
     "                os.makedirs('./model/' + version)\n",
     "            saver.save(sess, './model/' +version + '/' + str(i))  \n",
-    "        if i%50 == 0:\n",
+    "        if i%save_image == 0:\n",
     "            # save images\n",
     "            if not os.path.exists(newPoke_path):\n",
     "                os.makedirs(newPoke_path)\n",
