--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import os"
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import os\n",
+    "import boto3\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
+    "import importlib\n",
+    "import utils2\n",
+    "importlib.reload(utils2)\n",
+    "from utils2 import *\n",
+    "\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "current_dir = os.getcwd()\n",
-    "data_dir = os.path.join(current_dir, '..', 'data')\n",
+    "data_dir = os.path.join(current_dir, '..', 'raw')\n",
     "\n",
     "version = 'new_cristals'\n",
     "new_path = './' + version"
@@ -40,25 +51,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data(data_dir):\n",
-    "    images = []\n",
-    "    for image in os.listdir(data_dir):\n",
-    "        images.append(os.path.join(data_dir, image))\n",
-    "        \n",
-    "    all_images = tf.convert_to_tensor(images, dtype=tf.string)\n",
-    "    #images_qeue = tf.train.slice_input_producer([all_images])\n",
-    "    content = tf.read_file(all_images)\n",
-    "    image = tf.image.decode_jpeg(all_images, channels = CHANNEL)\n",
-    "    \n",
-    "    content = tf.data.Dataset.from_tensor_slices(tuple([all_images])))\n",
-    "    \n",
-    "    \n",
-    "        "
+    "aws_secret = 'i+tdlojssrxdZV1vUXIs9YXVYIZpCv3pk7Vt8mPr'\n",
+    "aws_access = 'AKIAIHOCCBZFO5AHUNWQ'\n",
+    "bucket = 'crystals-gdg'\n",
+    "zip_data = 'data.zip'\n",
+    "s3 = boto3.client('s3', \n",
+    "                  aws_access_key_id = aws_access, \n",
+    "                  aws_secret_access_key = aws_secret)\n",
+    "s3.download_file(bucket, zip_data, '../' + zip_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_ref = zipfile.ZipFile('../' + zip_data, 'r')\n",
+    "zip_ref.extractall('../')\n",
+    "zip_ref.close()\n",
+    "os.remove('../' + zip_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 0 images belonging to 0 classes.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras_preprocessing.image.directory_iterator.DirectoryIterator at 0x12b6bfc18>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datagen = ImageDataGenerator()\n",
+    "datagen.flow_from_directory(\n",
+    "        data_dir, target_size=(HEIGHT, WIDTH),\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        class_mode=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'ImageDataGenerator' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-e6124c0a50d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatagen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'ImageDataGenerator' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "len(datagen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
